src/parser/tests/parse_errors/snapshots/rusty__parser__tests__parse_errors__parse_error_literals_tests__illegal_literal_time_double_segments_test.snap
---
source: src/parser/tests/parse_errors/parse_error_literals_tests.rs
expression: diagnostics
---
error: Invalid TIME Literal: segments must be unique
  ┌─ <internal>:3:13
  │
3 │             T#1d4d2h3m;
  │             ^^^^^^^^^^ Invalid TIME Literal: segments must be unique


